# ard-pipeline

./: .dockerignore  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Dockerfile  Dockerfile.conda  Dockerfile.jellis  Justfile  README.md  bitbucket-pipelines.yml  check-code.sh  checksum.py  contiguity.py  contrast.py  dataset-cmp  fmask_cophub.py  fmask_cophub_contiguity.py  html_geojson.py  meson.build  package.py  process.py  pyproject.toml  quicklook.py  setup.py  ula3_pbs.py  unpack.py  versioneer.py  yaml_merge.py
.github/workflows/: docker.yaml  pre-commit.yaml
ULA3/: __init__.py  blrb.py  calculate_angles.py  meta.py  modtran.py  setup.py  solar.py  tc.py  utils.py
ULA3/ancillary/: __init__.py  aerosol.py  brdf.py  elevation.py  ozone.py  solar.py  water.py
ULA3/common/: pqa_result.py
ULA3/dataset/: __init__.py  _dataset.py  _ozone_dataset.py  _scene_dataset.py
ULA3/fc/: __init__.py  utils.py
ULA3/geodesic/: __init__.py  calculate_angles.py  dec_datetime.py  vincenty.py
ULA3/image_processor/: __init__.py  constants.py  utils.py
ULA3/metadata/: _metadata.py  _mtl_metadata.py  _report_metadata.py  _xml_metadata.py
ULA3/tests/: general_tools.py  test_IDL_functions.py  test_binread.py  test_blrb.py  test_calculate_angles.py  test_modtran.py  (+3 more)
ard-pipeline/: README  configure.py  module-config.yaml
configs/: landsat.cfg  logging.cfg  sentinel-2.cfg
deployment/: base-environment.yaml  check-environment.sh  create-conda-environment.sh  dataset-cmp  environment.yaml
docs/: build-sphinx.sh
env_tests/: test_modtran.py  test_modtran_json_format.py
eugl/: _version.py  acquisition_info.py  contiguity.py  fmask.py  fmask_cophub.py  metadata.py  mndwi.py  s2cl.py  test_fmask.py  version.py
gaip/: GriddedGeoBox.py  __init__.py  _version.py  acca_cloud_masking.py  acquisition.py  ancillary.py  aot_converter.py  brdf.py  calculate_angles.py  calculate_incident_exiting_angles.py  calculate_lon_lat_arrays.py  calculate_reflectance.py  calculate_self_shadow.py  calculate_shadow_masks.py  calculate_slope_aspect.py  cast_shadow.py  cloud_shadow_masking.py  constants.py  contiguity_masking.py  core.py  data.py  dsm.py  endmembers.py  fast_cache.py  fc_utils.py  fmask_cloud_masking.py  fmask_cloud_masking_wrapper.py  geobox.py  get_brdf.py  hdf5.py  incident_exiting_angles.py  interpolate.py  interpolation.py  land_sea.py  land_sea_masking.py  longitude_latitude_arrays.py  margins.py  mem_utils.py  memuseFilter.py  metadata.py  (+33 more)
image_processor/: get_input_datasets.py
modtran/: Dockerfile  README.md  docker-compose.yaml  k8s-job.yaml
overlay/: Dockerfile  Dockerfile.poc
poc/: Dockerfile  Dockerfile.conda  Dockerfile.pip
s2pkg/: checksum.py  contiguity.py  contrast.py  fmask_cophub.py  html_geojson.py  package.py  workflow.py  yaml_merge.py
scripts/: aot_converter.py  aws-process-scene-landsat.sh  aws-process-scene-sentinel-2.sh  check-exists-2.py  check-exists.py  check_exists.py  gaip_convert.py  lib.sh  luigi-landsat.cfg  luigi-logging-sentinel-2.cfg  luigi-sentinel-2.cfg  process-scene-sentinel-2.sh  publish-sns.py  s2-l1c-aws-pds-generate-metadata.py  test_calculate_angles.py  test_exiting_angles.py  test_incident_angles.py  test_relative_slope.py  test_shadow_masks.py  test_slope_aspect.py
src/: aot_converter.py
tesp/: _version.py  checksum.py  constants.py  contiguity.py  contrast.py  html_geojson.py  luigi_db_utils.py  metadata.py  package.py  prepare.py  sensitivity.py  version.py  workflow.py  yaml_merge.py
test/: TestEndMembers.py  compare_files.py  test_hdf5.py  test_nbar_tc.py  test_read_subset.py  test_tle.py
testing/: cmp-fmask-outputs.py  fmask-generate-test-data.py
tests/: common.py  data.py  test_acquisition.py  test_acquisition_read.py  test_acquisition_sentinel.py  test_blrb.py  test_cogtif_conf.py  test_geobox.py  test_hdf5.py  test_interpolation.py  test_land_sea.py  test_land_sea_masking.py  test_lon_lat.py  test_ls7_gap_mask.py  test_metadata.py  test_modtran.py  test_modtran_json_format.py  test_mtl.py  test_prepare_ls5_l1.py  test_prepare_ls7_l1.py  test_prepare_ls8_l1.py  test_prepare_ls_l1.py  test_random_locations.py  test_read_subset.py  test_reformat_tp5.py  test_tiling.py  test_tle.py  test_tp5.py  test_vincenty.py
utils/: find-version.py  find-version.sh  py-files.sh  python-package-files.sh
wagl/: __init__.py  _version.py  ancillary.py  brdf.py  cloud_shadow_masking.py  constants.py  contiguity_masking.py  data.py  dsm.py  fmask_cloud_masking.py  geobox.py  hdf5.py  incident_exiting_angles.py  interpolation.py  land_sea.py  land_sea_masking.py  logging.py  logs.py  longitude_latitude_arrays.py  margins.py  meson.build  metadata.py  modtran.py  modtran_profile_json.py  modtran_profiles.py  mtl.py  multifile_workflow.py  pq.py  reflectance.py  satellite_solar_angles.py  saturation_masking.py  setup.py  singlefile_workflow.py  slope_aspect.py  standardise.py  temperature.py  terrain_shadow_masks.py  tiling.py  tle.py  unittesting_tools.py  (+1 more)
wagl/acquisition/: __init__.py  base.py  landsat.py  sensors.json  sentinel.py  worldview.py
wagl/f90_sources/: bilinear_interpolation.f90  brdf_shape.f90  cast_shadow_main.f90  cast_shadow_mask.f90  compute_angles.f90  earth_rotation.f90  geod2geo.f90  q_cal.f90  satellite_angles_main.f90  satellite_model.f90  satellite_solar_angles_main.f90  satellite_track.f90  solar_angle.f90  solar_angles_main.f90  surface_reflectance.f90  terrain_border_margins.f90  terrain_occlusion.f90  track_time_info.f90
wagl/hdf5/: __init__.py  compression.py
wagl/scripts/: aot_converter.py  gaip_residuals.py  test_dsm.py  test_exiting_angles.py  test_incident_angles.py  test_relative_slope.py  test_satellite_solar_angles.py  test_slope_aspect.py  test_terrain_shadow_masks.py  wagl_buildvrt.py  wagl_convert.py  wagl_ls.py  wagl_pbs.py  wagl_residuals.py  wagl_show.py
wagl/spectral_response/: landsat5_vsir.flt  landsat7_thermal.flt  sentinel2c_all.flt
workflow/: Test_FC_mpi.py  __init__.py  agdc_fc.py  dc_fc.py  fc.py  nbar.py  pq.py  query_agdc.py  workflow_nbar.py
(+223 files in other folders)
