[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy']

[project]
name = 'ard-pipeline'
description = 'ARD image processing'
version = '6.0.0.dev1'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENCE.md'}
authors = [
  {name = 'Geoscience Australia', email = 'earth.observation@ga.gov.au'},
]
dependencies = [
          "attrs>=17.4.0",
          "checksumdir",
          "ciso8601",
          "click",
          "click_datetime",
          "eodatasets3>=0.19.2",
          "ephem>=3.7.5.3",
          "fiona>=1.7.0",
          "folium",
          "GDAL>=1.9.2",
          "geopandas>=0.1.1",
          "h5py>=2.5.0",
          "idl-functions>=0.5.2",  # custom package via git, not pypi
          "importlib-metadata;python_version<'3.8'",
          "luigi>2.7.6",
          "nested_lookup>=0.1.3",
          "numexpr>=2.4.6",
          "numpy>=1.8",
          "pandas>=0.17.1",
          "pyproj>1.9.5",
          "python-dateutil>=2.6.1",
          "python-fmask==0.5.7",
          "pyyaml>=3.11",
          "rasterio>1,!=1.0.3.post1,!=1.0.3",  # issue with /vsizip/ reader
          "rios",
          "s2cloudless==1.5.0",
          "scikit-image>=0.8.2",
          "scipy>=0.14",
          "sentinelhub==3.4.2",
          "shapely>=1.5.13",
          "structlog>=16.1.0",
          "tables>=3.4.2",
]
# Was needed for tesp .. here too? TODO
include_package_data = true
package_data = { "eugl.gqa"= ["data/*.csv"] }
dependency-links = [
        "git+git://github.com/sixy6e/idl-functions.git@master#egg=idl-functions-0.5.2",
        "git+https://github.com/ubarsc/rios@rios-1.4.10#egg=rios-1.4.10",
        "git+https://github.com/ubarsc/python-fmask@pythonfmask-0.5.7#egg=python-fmask-0.5.7",  # noqa: E501
]

[project.scripts]
ard_batch_summary = "tesp.scripts.batch_summary:main"
ard_pbs = "tesp.scripts.ard_pbs:main"
ard_s2package = "tesp.scripts.s2_package:package_output"
ard_search_s2 = "tesp.scripts.search_s2:main"
ard_test_dsm = "wagl.scripts.test_dsm:main"
ard_test_exiting_angles = "wagl.scripts.test_exiting_angles:main"
ard_test_incident_angles = "wagl.scripts.test_incident_angles:main"
ard_test_relative_slope = "wagl.scripts.test_relative_slope:main"
ard_test_satellite_solar_angles = "wagl.scripts.test_satellite_solar_angles:main"
ard_test_slope_aspect = "wagl.scripts.test_slope_aspec:main"
ard_test_terrain_shadow_masks = "wagl.scripts.test_terrain_shadow_masks:main"
wagl_aot_converter = "wagl.scripts.aot_converter:main"
wagl_buildvrt = "wagl.scripts.wagl_buildvrt:main"
wagl_convert = "wagl.scripts.wagl_convert:main"
wagl_ls = " wagl.scripts.wagl_ls:main"
wagl_pbs = "wagl.scripts.wagl_pbs:main"
wagl_residuals = "wagl.scripts.wagl_residuals:main"
